Support for OPT 18
Detecting OPT version at runtime to maintain compatibility with
versions < 18

--- a/rebar.config
+++ b/rebar.config
@@ -44,3 +44,7 @@
 {post_hooks, [{clean, "make c_src_clean"}]}.
 {xref_checks, []}.
 {xref_queries, [{"(XC - UC) || (XU - X - B - \"(cluster_info|dtrace)\" : Mod)", []}]}.
+
+{deps, [
+    {opt_utils, ".*", {git, "git://github.com/rhumbertgz/opt_utils.git", {branch, "master"}}},
+]}.
