--- a/rebar.config
+++ b/rebar.config
@@ -46,5 +46,5 @@
 {xref_queries, [{"(XC - UC) || (XU - X - B - \"(cluster_info|dtrace)\" : Mod)", []}]}.
 
 {deps, [
-    {opt_utils, ".*", {git, "git://github.com/rhumbertgz/opt_utils.git", {branch, "master"}}},
-]}.
+        {opt_utils, ".*", {git, "git://github.com/rhumbertgz/opt_utils.git", {branch, "master"}}}
+       ]}.
