update for supporting OTP 18

--- a/rebar.config
+++ b/rebar.config
@@ -45,6 +45,4 @@
 {xref_checks, []}.
 {xref_queries, [{"(XC - UC) || (XU - X - B - \"(cluster_info|dtrace)\" : Mod)", []}]}.
 
-{deps, [
-        {otp_utils, ".*", {git, "git://github.com/rhumbertgz/otp_utils", {branch, "master"}}}
-       ]}.
+{deps, []}.
